OLED scaling fix

--- a/platformio.ini
+++ b/platformio.ini
@@ -23,3 +23,4 @@ lib_deps =
         https://github.com/SpacehuhnTech/SimpleCLI
         https://github.com/arduino-libraries/Arduino_DebugUtils
         https://github.com/arduino-libraries/Arduino_ESP32_OTA
+debug_build_flags = -Os
